--- a/src/app/components/info-component/info-component.html
+++ b/src/app/components/info-component/info-component.html
@@ -9,8 +9,7 @@
             <p-panel header="Powered by OpenAI's GPT-4, GPT-4 mini, TTS, and Whisper models." class="p-header">
                 <p class="info-feature">
                     Choose between GPT-4 and GPT-4 mini, use text-to-speech to hear the model talk, and speech-to-text to have a real-time conversation with Chat GPT.
-                    You can save up to 5 conversation threads linked to your user profile and come back later to pick up the session where you left it. Use documents or
-                    pictures to fully utilize OpenAI's toolset (requires the GPT-4 model) and use the temperature slider to customize the response accuracy/creativity levels.
+                    This is very much a work in progress and I will add additional features in the future.
                 </p>
                 <p class="info-feature">
                     This website uses a customized version of the <a href="https://poseidon.primeng.org/" target="_blank">Poseidon</a> template from <a href="https://primeng.org/" target="_blank">PrimeNG</a>.
