Some last minute changes

--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -79,7 +79,9 @@
                 (click)="onMenuButtonClick()"
                 pRipple
             >
-                <i class="pi pi-bars"></i>
+                <span class="material-symbols-outlined">
+                right_panel_open
+                </span>
             </a>
         </div>
 
